# faers_datalakehouse

./: .gitignore  README.md  databricks.yml  main.py  pyproject.toml
.github/workflows/: deploy_production.yml  main_databricks.yml  main_databricks_dev.yml  main_databricks_prod.yml  main_infrastructure.yml  pull_request.yml
infra/terraform/: README.md  main.tf  outputs.tf  providers.tf  variables.tf
infra/terraform/modules/faers-lakehouse/: README.md  locals.tf  main.tf  outputs.tf  variables.tf  versions.tf
notebooks/: exploration.ipynb
resources/clusters/: dev.yml
resources/jobs/: faers_pipeline.yml  gold_dimensions.yml  gold_facts.yml  ingest_bronze.yml  transform_silver.yml
src/: config.yml
src/bronze/: ingest_demographics.py  ingest_drug_details.py  ingest_indications.py  ingest_outcomes.py  ingest_reactions.py  ingest_reports.py  ingest_therapy_dates.py
src/gold/analytics/: fact_analytics.py
src/gold/dims/: dim_date.py  dim_drug.py  dim_indication.py  dim_outcome.py  dim_patient.py  dim_reaction.py  dim_report.py  dim_therapy.py
src/gold/facts/: fact_adverse_events.py
src/silver/: silver_demographics.py  silver_drug_details.py  silver_indications.py  silver_outcomes.py  silver_reactions.py  silver_reports.py  silver_therapy_dates.py
src/utils/: config.py  jobs.py  logger.py  scd_type2.py  silver_transformations.py  utils.py
tests/unit/: test_scd_type2.py  test_silver_transformations.py  test_utils.py
